--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,12 @@
-# 应用服务 WEB 访问端口
-server.port=8080
+
+server.port=8082
+
+spring.datasource.driverClassName = com.mysql.cj.jdbc.Driver
+spring.datasource.url = jdbc:mysql://localhost:3306/eshop?characterEncoding=utf-8&serverTimezone=UTC&useSSL=false
+spring.datasource.username = root
+spring.datasource.password = 20030819hxt=
+
+spring.mvc.pathmatch.matching-strategy=ANT_PATH_MATCHER
+
+mybatis-plus.mapper-locations=src/main/java/com/myproject/eshop/demos/mapper/*.xml
 
