--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,4 +10,11 @@ spring.mvc.pathmatch.matching-strategy=ANT_PATH_MATCHER
 
 mybatis-plus.mapper-locations=src/main/java/com/myproject/eshop/demos/web/mappers/*.xml
 
+my.cross.url = http://172.20.36.194:8081
+
+aliyun.oss.endpoint = oss-cn-hangzhou.aliyuncs.com
+aliyun.oss.accessKeyId = LTAI5tSkQNVNbrCA7wEMh9hM
+aliyun.oss.accessKeySecret=NKSBOAEwZOvFGYsbN3HDoNBzelzUX9
+aliyun.oss.bucketName = 5efc9a
+
 
