--- a/.gitignore
+++ b/.gitignore
@@ -19,6 +19,11 @@ target/
 *.iml
 *.ipr
 
+src/mian/resources/application.properties:15
+src/mian/resources/application.properties:16
+src/mian/resources/application.properties:17
+src/mian/resources/application.properties:18
+
 ### NetBeans ###
 /nbproject/private/
 /nbbuild/
