修复了店铺得到索引问题-11.6_1

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,6 +2,7 @@
 server.port=8082
 
 spring.datasource.driverClassName = com.mysql.cj.jdbc.Driver
+spring.datasource.allowMultiQueries=true
 spring.datasource.url = jdbc:mysql://localhost:3306/eshop?characterEncoding=utf-8&serverTimezone=UTC&useSSL=false
 spring.datasource.username = root
 spring.datasource.password = 20030819hxt=
@@ -12,6 +13,7 @@ mybatis-plus.mapper-locations=src/main/java/com/myproject/eshop/demos/web/mapper
 
 my.cross.url = http://172.20.36.194:8081
 
-
-
-
+aliyun.oss.endpoint = oss-cn-hangzhou.aliyuncs.com
+aliyun.oss.accessKeyId = LTAI5tSkQNVNbrCA7wEMh9hM
+aliyun.oss.accessKeySecret=NKSBOAEwZOvFGYsbN3HDoNBzelzUX9
+aliyun.oss.bucketName = 5efc9a
